* Reworked Identity  Pages * Added new UserDbContext class with Models

--- a/GeoDoorServer3/appsettings.json
+++ b/GeoDoorServer3/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GeoDoorServer3ContextConnection": "DataSource=GeoDoorServer3.db"
+    "GeoDoorServer3ContextConnection": "DataSource=GeoDoorServer3.db",
+    "DefaultConnection": "DataSource=User.db"
   }
 }
