* Implemented Custom Service with Rest Post and Get methods * Finished Testing Rest API

--- a/GeoDoorServer3/appsettings.json
+++ b/GeoDoorServer3/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "GeoDoorServer3ContextConnection": "DataSource=GeoDoorServer3.db",
     "DefaultConnection": "DataSource=User.db"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
   }
 }
