--- a/GeoDoorServer3/GeoDoorServer3.csproj
+++ b/GeoDoorServer3/GeoDoorServer3.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
     <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
   </PropertyGroup>
 
 
